# mdfile

./: .gitignore  .pylintrc  README.md  README.mdd  pyproject.toml
src/markymark/: mnm.py
src/mdfile/: .coverage  __init__.py  __main__.py  dotted_dict.py  main.py  md_updater.py  mdfile.py  vars.py
src/mdfile/to_md/: md_factory.py  to_markdown.py
src/mdfile/updater/: files.py  ignore.py  process.py  str_utils.py  validator.py  variables.py
src/mdfile/util/: dotted_dict.py
test/: test_dd.py  test_files.py  test_ignore.py  test_invoke.py  test_main.py  test_mnm.py  test_proc_class.py  test_strutil.py  test_toml.py  test_validator.py  test_var_class.py  test_vars_builtin.py
test/input/: c.c  example.md  example_c.md  example_java.md  example_json.md  example_junk.md  example_markdown.md  example_numbers.md  example_proc.md  example_proc_insert.md  example_python.md  example_python_bad_glob.md  example_python_glob.md  example_python_glob_insert.md  example_python_insert.md  java.java  json.json  junk.junk  markdown.md  python.py  python2.py  test.csv  test_numbers.csv
test/output/: example_c.md  example_java.md  example_json.md  example_junk.md  example_markdown.md  example_output.md  example_output_bold.md  example_output_br.md  example_output_date.md  example_output_numbers.md  example_proc_insert.md  example_python.md  example_python_insert.md
test/toml/main/dir1/: pyproject.toml
test/toml/main/dir1/dir2/: pyproject.toml
